-- =====================================================
-- LIMPEZA: Remove tabelas na ordem reversa de dependência
-- =====================================================
DROP TABLE IF EXISTS consentimentos_lgpd;
DROP TABLE IF EXISTS aceites_documentos;
DROP TABLE IF EXISTS cupons_usados;
DROP TABLE IF EXISTS pagamentos;
DROP TABLE IF EXISTS itens_pedido;
DROP TABLE IF EXISTS pedidos;
DROP TABLE IF EXISTS cupons;
DROP TABLE IF EXISTS campanhas;
DROP TABLE IF EXISTS movimentacoes_estoque;
DROP TABLE IF EXISTS estoques;
DROP TABLE IF EXISTS usuario_unidade;
DROP TABLE IF EXISTS produtos;
DROP TABLE IF EXISTS unidades;
DROP TABLE IF EXISTS usuarios;

-- =====================================================
-- Tabela de usuários
-- =====================================================
CREATE TABLE usuarios (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    senha VARCHAR(255) NOT NULL,
    perfil VARCHAR(50) NOT NULL,
    pontos INTEGER NOT NULL DEFAULT 0,
    telefone VARCHAR(20),
    cpf VARCHAR(14),
    anonimizado BOOLEAN NOT NULL DEFAULT FALSE
);

-- =====================================================
-- Tabela de consentimentos LGPD (historico imutavel)
-- =====================================================
CREATE TABLE consentimentos_lgpd (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    usuario_id BIGINT NOT NULL,
    finalidade VARCHAR(50) NOT NULL,
    versao_termo VARCHAR(30) NOT NULL,
    concedido BOOLEAN NOT NULL,
    registrado_em TIMESTAMP NOT NULL,
    origem VARCHAR(50) NOT NULL,
    FOREIGN KEY (usuario_id) REFERENCES usuarios(id)
);

CREATE INDEX idx_consentimento_usuario_finalidade_data
    ON consentimentos_lgpd (usuario_id, finalidade, registrado_em, id);

-- =====================================================
-- Aceites contratuais versionados de documentos legais
-- =====================================================
CREATE TABLE aceites_documentos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    usuario_id BIGINT NOT NULL,
    tipo_documento VARCHAR(40) NOT NULL,
    versao VARCHAR(30) NOT NULL,
    hash_documento VARCHAR(64) NOT NULL,
    aceito_em TIMESTAMP NOT NULL,
    origem VARCHAR(50) NOT NULL,
    FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
    CONSTRAINT uk_aceite_usuario_tipo_versao UNIQUE (usuario_id, tipo_documento, versao)
);

CREATE INDEX idx_aceite_usuario_tipo
    ON aceites_documentos (usuario_id, tipo_documento, aceito_em, id);

-- =====================================================
-- Tabela de unidades
-- =====================================================
CREATE TABLE unidades (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    endereco VARCHAR(255) NOT NULL,
    cidade VARCHAR(100),
    estado VARCHAR(2),
    cep VARCHAR(10),
    telefone VARCHAR(20),
    ativo BOOLEAN NOT NULL DEFAULT TRUE
);

-- =====================================================
-- Tabela de produtos (com descricao e ativo)
-- =====================================================
CREATE TABLE produtos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    descricao VARCHAR(500),
    preco_vigente DECIMAL(10,2) NOT NULL,
    ativo BOOLEAN NOT NULL DEFAULT TRUE
);

-- =====================================================
-- Tabela de estoques (vínculo produto-unidade)
-- =====================================================
CREATE TABLE estoques (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    unidade_id BIGINT NOT NULL,
    produto_id BIGINT NOT NULL,
    quantidade INTEGER NOT NULL DEFAULT 0,
    FOREIGN KEY (unidade_id) REFERENCES unidades(id),
    FOREIGN KEY (produto_id) REFERENCES produtos(id),
    UNIQUE (unidade_id, produto_id)
);

-- =====================================================
-- Historico auditavel de entradas e saidas de estoque
-- =====================================================
CREATE TABLE movimentacoes_estoque (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    estoque_id BIGINT NOT NULL,
    tipo VARCHAR(20) NOT NULL,
    quantidade INTEGER NOT NULL,
    saldo_anterior INTEGER NOT NULL,
    saldo_posterior INTEGER NOT NULL,
    motivo VARCHAR(255) NOT NULL,
    ator VARCHAR(20) NOT NULL,
    criado_em TIMESTAMP NOT NULL,
    FOREIGN KEY (estoque_id) REFERENCES estoques(id),
    CHECK (tipo IN ('ENTRADA', 'SAIDA')),
    CHECK (quantidade > 0),
    CHECK (saldo_anterior >= 0),
    CHECK (saldo_posterior >= 0)
);

CREATE INDEX idx_movimentacoes_estoque_data
    ON movimentacoes_estoque (estoque_id, criado_em, id);

-- =====================================================
-- Tabela de pedidos
-- =====================================================
CREATE TABLE pedidos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    usuario_id BIGINT NOT NULL,
    cliente_id BIGINT,
    unidade_id BIGINT NOT NULL,
    usuario_registro_id BIGINT,
    status VARCHAR(50) NOT NULL,
    valor_total DECIMAL(10,2) NOT NULL,
    desconto DECIMAL(10,2) NOT NULL DEFAULT 0,
    pontos_utilizados INTEGER NOT NULL DEFAULT 0,
    pontos_concedidos INTEGER NOT NULL DEFAULT 0,
    forma_pagamento VARCHAR(50) NOT NULL,
    canal_pedido VARCHAR(50) NOT NULL,
    codigo_cupom VARCHAR(50),
    pedido_interno BOOLEAN NOT NULL DEFAULT FALSE,
    chave_idempotencia VARCHAR(100),
    hash_requisicao VARCHAR(64),
    criado_em TIMESTAMP NOT NULL,
    expira_em TIMESTAMP NOT NULL,
    FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
    FOREIGN KEY (cliente_id) REFERENCES usuarios(id),
    FOREIGN KEY (unidade_id) REFERENCES unidades(id),
    FOREIGN KEY (usuario_registro_id) REFERENCES usuarios(id),
    UNIQUE (usuario_registro_id, chave_idempotencia)
);

-- =====================================================
-- Tabela de itens_pedido
-- =====================================================
CREATE TABLE itens_pedido (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id BIGINT NOT NULL,
    produto_id BIGINT NOT NULL,
    quantidade INTEGER NOT NULL,
    preco_unitario DECIMAL(10,2) NOT NULL,
    FOREIGN KEY (pedido_id) REFERENCES pedidos(id),
    FOREIGN KEY (produto_id) REFERENCES produtos(id)
);

-- =====================================================
-- Tabela de pagamentos
-- =====================================================
CREATE TABLE pagamentos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id BIGINT NOT NULL,
    forma_pagamento VARCHAR(50) NOT NULL,
    valor DECIMAL(10,2) NOT NULL,
    status VARCHAR(50) NOT NULL,
    codigo_transacao VARCHAR(255),
    codigo_estorno VARCHAR(255),
    estornado_em TIMESTAMP,
    criado_em TIMESTAMP NOT NULL,
    FOREIGN KEY (pedido_id) REFERENCES pedidos(id)
);

-- =====================================================
-- Tabela de usuario_unidade (vínculo funcionário-unidade)
-- =====================================================
CREATE TABLE usuario_unidade (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    usuario_id BIGINT NOT NULL,
    unidade_id BIGINT NOT NULL,
    FOREIGN KEY (usuario_id) REFERENCES usuarios(id),
    FOREIGN KEY (unidade_id) REFERENCES unidades(id),
    UNIQUE (usuario_id, unidade_id)
);

-- =====================================================
-- Tabela de campanhas (descontos por item/produto)
-- =====================================================
CREATE TABLE campanhas (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nome VARCHAR(255) NOT NULL,
    produto_id BIGINT NOT NULL,
    unidade_id BIGINT NOT NULL,
    preco_promocional DECIMAL(10,2) NOT NULL,
    data_inicio TIMESTAMP NOT NULL,
    data_fim TIMESTAMP NOT NULL,
    ativa BOOLEAN NOT NULL DEFAULT TRUE,
    FOREIGN KEY (produto_id) REFERENCES produtos(id),
    FOREIGN KEY (unidade_id) REFERENCES unidades(id)
);

-- =====================================================
-- Tabela de cupons (descontos por pedido)
-- =====================================================
CREATE TABLE cupons (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo VARCHAR(50) NOT NULL UNIQUE,
    tipo_desconto VARCHAR(20) NOT NULL,
    valor DECIMAL(10,2) NOT NULL,
    valor_minimo_pedido DECIMAL(10,2) DEFAULT 0,
    unidade_id BIGINT,
    data_inicio TIMESTAMP NOT NULL,
    data_fim TIMESTAMP NOT NULL,
    ativo BOOLEAN NOT NULL DEFAULT TRUE,
    uso_maximo INTEGER,
    uso_atual INTEGER NOT NULL DEFAULT 0,
    FOREIGN KEY (unidade_id) REFERENCES unidades(id)
);

-- =====================================================
-- Tabela de cupons_usados (trilha de auditoria)
-- =====================================================
CREATE TABLE cupons_usados (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cupom_id BIGINT NOT NULL,
    pedido_id BIGINT NOT NULL,
    usuario_id BIGINT NOT NULL,
    valor_desconto DECIMAL(10,2) NOT NULL,
    utilizado_em TIMESTAMP NOT NULL,
    estornado_em TIMESTAMP,
    FOREIGN KEY (cupom_id) REFERENCES cupons(id),
    FOREIGN KEY (pedido_id) REFERENCES pedidos(id),
    FOREIGN KEY (usuario_id) REFERENCES usuarios(id)
);
